--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<script>
-  window.location.href = "https://55gms.lol";
-</script>
+<h1>55gms.tk is about to go poo poo</h1>
+<br><br>
+<h2>To Continue using it, Please switch to a different domain, or by just clicking <a href="https://55gms.lol">here</a></a></h2>
